[package]
name = "jito-shredstream-client"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "jito_shredstream_client"
path = "src/lib.rs"

[[bin]]
name = "jito-shredstream-client"
path = "src/main.rs"

[[example]]
name = "test-buy"
path = "examples/test-buy.rs"

[[example]]
name = "test-sell"
path = "examples/test-sell.rs"

[[example]]
name = "test-buy-without-ata"
path = "examples/test-buy-without-ata.rs"

[[example]]
name = "test-buy-smart"
path = "examples/test-buy-smart.rs"

[dependencies]
jito-protos = { path = "jito_protos" }
solana-entry = "1.17.0"
solana-sdk = "1.17.0"
solana-program = "1.17.0"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3.3"
chrono = "0.4.31"
borsh = "1.2.1"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = "0.3"
solana-rpc-client = "1.17.0"
solana-rpc-client-api = "1.17.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
dotenvy = "0.15.7"
clap = { version = "4.4", features = ["derive"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
